<resources>
    <string name="app_name">AAU JukeBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Queue">Queue</string>
    <string name="Playlist">Playlist</string>
    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Host">Host</string>
    <string name="Administration">Administration</string>
    <string name="action_settings">Settings</string>
    <string name="QueueFragment">Queue</string>
    <string name="title_activity_peer_to_peer">PeerToPeer</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="play_button">This button will start/pause the player</string>
    <string name="no_song_playing_text">No song playing</string>
    <string name="add_track_to_queue">add_track_to_queue</string>
    <string name="search_term">Write search term here</string>
    <string name="connect">Connect</string>
    <string name="send_info">Send Info</string>
    <string name="mange_spotify_account">Manage spotify account</string>
    <string name="modify_account">Modify account</string>
    <string name="disconnect_account">Disconnect Spotify account</string>
    <string name="genre_prefences">Genre prefences:</string>
    <string name="rock">Rock</string>
    <string name="jazz">Jazz</string>
    <string name="house">House</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="Disconnect_from_network">Disconnect from Network</string>
    <string name="Connections">Connections</string>
</resources>
