<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_queue"
            android:icon="@drawable/ic_playlist_play"
            android:title="@string/Queue" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_action_list"
            android:title="@string/Playlist" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_disconnect"
            android:icon="@drawable/ic_cancel"
            android:title="@string/Disconnect" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_star"
            android:title="@string/Administration" />
    </group>


</menu>
