<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="3dp"
    android:background="@drawable/music">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/label_me"
        android:textColor="@color/textColor"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/white" />
    <!-- Self information -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/textColor"/>
        <TextView
            android:id="@+id/my_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:textColor="@color/textColor"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_p2p_button"
            android:gravity="center_vertical"
            android:onClick="enableP2P"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:gravity="center_vertical"
            android:onClick="refresh" />
    </LinearLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/label_peers"
        android:textColor="@color/textColor"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/white" />
    <!-- Available peers -->
    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />
    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/empty_message"
        android:textColor="@color/textColor"/>

    <ListView
        android:id="@+id/listviewPeers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>